--- a/puzzles/spiralSquare.html
+++ b/puzzles/spiralSquare.html
@@ -63,7 +63,7 @@ p{margin-left: 20px; margin-top: 2px}
     var ctx=canvas.getContext("2d"); let canW=canvas.width;
     ctx.strokeStyle=colorline; ctx.lineWidth=1;  
  var img2=new Image();  // Создаём изображение
- img2.src = "Brb_01.jpg";
+ img2.src = "BRB_01.jpg";
 
    let W0,H0,Wfin,W,H,x0,y0,kW,dfi,sinb,cosb,k1;  let nscr=0;
   
