--- a/puzzles/nick/index_n.html
+++ b/puzzles/nick/index_n.html
@@ -45,6 +45,7 @@
   </div>
   <div class="column">
     <h5>Other</h5>
+    <p><a href="_tb0/_tb.html">Theater & Billiard</a></p>
     <p><a href="ball.html">Ball with Barboss</a></p>
   </div>
 
