--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -34,6 +34,7 @@
     <h5>Programs</h5>
     <p><a href="puzzlet.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>
     <p><a href="../bajan/flag1.html">FLAG</a><br></p>
+    <p><a href="../nick/_tb0/_tb.html">Theater&Billiard</a></p>
   </div>
   <div class="column">
     <h5>Pictires</h5>
