--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../ICO/sirano.ico" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Михаил Иванович</title>
    <style>
     * {  box-sizing: border-box; }   
