--- a/puzzles/nick/index_n.html
+++ b/puzzles/nick/index_n.html
@@ -47,6 +47,7 @@
     <h5>Other</h5>
     <p><a href="_tb0/_tb.html">Theater & Billiard</a></p>
     <p><a href="ball.html">Ball with Barboss</a></p>
+    <p><a href="_tb0/_tb1.html">Bears theater</a></p>
   </div>
 
 </div>
