--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h5>Programs</h5>
     <p><a href="./puzzles/flag/flag1.html">flag</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
-    <p><a href="_p/pref.html">Preferance</a> </p>
+    <p><a href="_p/pref21.html">Preferance</a> </p>
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
     <p><a href="puzzles/spiralSquare.html">Spiral Square</a> </p>
     <p><a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
