--- a/_p/pref21.html
+++ b/_p/pref21.html
@@ -86,6 +86,7 @@ label,a,input[type='button']{
    var Sred;
    var Rez= [];   
    let pula = []; 
+  let month=['jan','feb','mar','apr','maj','jun','jul','aug','sep','okt','nov','dec']
  function Calculate() {
   N=+gv[2].value
   for (i = 0; i < 3; i++){pula[i]=[]
