--- a/_p/pref21.html
+++ b/_p/pref21.html
@@ -1,7 +1,7 @@
 <html>
 <head>
         <meta charset="UTF-8">
-  <link rel="icon" href="../puzzles/ICO/sirano.ico" type="image/x-icon">
+  <link rel="icon" href="/puzzles/ICO/sirano.ico" type="image/x-icon">
   	<title>pref21</title> 
 		<style> 
 #btn1 {
