--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
     <h1>Михаил Иванович</h1>
-    <img  src="./puzzles/BRB_01.jpg" id="i0">
-    <img  src="./puzzles/DBLD_02.jpg" id="i1">
+    <img  src="puzzles/BRB_01.jpg" id="i0">
+    <img  src="puzzles/DBLD_02.jpg" id="i1">
     <img  src="./puzzles/ML_01.jpg" id="i2">
     <img  src="./puzzles/MI_01.jpg" id="i3">
     <img  src="./puzzles/Snuglse_02.jpg" id="i4">
