--- a/index.html
+++ b/index.html
@@ -30,42 +30,42 @@
     <h1>Михаил Иванович</h1>
     <img  src="puzzles/BRB_01.jpg" id="i0">
     <img  src="puzzles/DBLD_02.jpg" id="i1">
-    <img  src="./puzzles/ML_01.jpg" id="i2">
-    <img  src="./puzzles/MI_01.jpg" id="i3">
-    <img  src="./puzzles/Snuglse_02.jpg" id="i4">
+    <img  src="puzzles/ML_01.jpg" id="i2">
+    <img  src="puzzles/MI_01.jpg" id="i3">
+    <img  src="puzzles/Snuglse_02.jpg" id="i4">
     <img  src="./puzzles/Sirano_01.jpg" id="i5">
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5>
-    <p><a href="./puzzles/flag/flag1.html">flag</a> </p>
+    <p><a href="puzzles/flag/flag1.html">flag</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/pref21.html">Preferance</a> </p>
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
     <p><a href="puzzles/spiralSquare.html">Spiral Square</a> </p>
-    <p><a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
+    <p><a href="puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
     <p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
-    <p><a href="./puzzles/Puzzle_00.html">Puzzle_00</a></p>
+    <p><a href="puzzles/Puzzle_00.html">Puzzle_00</a></p>
     <p><a href="_p/line_r.html">Line_R</a></p>
-    <p><a href="./puzzles/js-gausst/tableGauss.html">Table Gauss</a></p>  
+    <p><a href="puzzles/js-gausst/tableGauss.html">Table Gauss</a></p>  
   </div>
   <div class="column">
     <h5>Pictires</h5>
-    <p><a href="./_p/berloga51.html">BERLOGA 51</a></p>
-    <p><a href="./images/mila-puzzle.jpg">mila puzzle</a></p>
-    <p><a href="./images/2020_epidemic.jpg">2020_epidemic</a></p>
-    <p><a href="./images/80Ded.gif">ded_80</a></p>
-    <p><a href="./_p/bears&b51.html">Bears and Berloga 51</a></p>
-    <p><a href="./images/mila-tiger.jpg">mila tiger</a></p>
-    <p><a href="./images/FromRussiaWithLove.jpg">From Russia with Love</a></p>
-    <p><a href="./images/mogychi-lap.jpg">Mogychi Lap</a></p>
-    <p><a href="./images/mila_mom.jpg">Royal Mom</a></p>
+    <p><a href="_p/berloga51.html">BERLOGA 51</a></p>
+    <p><a href="images/mila-puzzle.jpg">mila puzzle</a></p>
+    <p><a href="images/2020_epidemic.jpg">2020_epidemic</a></p>
+    <p><a href="images/80Ded.gif">ded_80</a></p>
+    <p><a href="_p/bears&b51.html">Bears and Berloga 51</a></p>
+    <p><a href="images/mila-tiger.jpg">mila tiger</a></p>
+    <p><a href="images/FromRussiaWithLove.jpg">From Russia with Love</a></p>
+    <p><a href="images/mogychi-lap.jpg">Mogychi Lap</a></p>
+    <p><a href="images/mila_mom.jpg">Royal Mom</a></p>
   </div>
   <div class="column">
     <h5>Family and friends</h5>
-    <p><a href="./puzzles/galina/pict/index_g.html">Wife Galina</a></p>
-    <p><a href="./puzzles/ana/index_a.html">Daughter Anastasiia</a></p>
-    <p><a href="./puzzles/nick/index_n.html">Grandson Nicky</a></p>
+    <p><a href="puzzles/galina/pict/index_g.html">Wife Galina</a></p>
+    <p><a href="puzzles/ana/index_a.html">Daughter Anastasiia</a></p>
+    <p><a href="puzzles/nick/index_n.html">Grandson Nicky</a></p>
   </div>
 </div>
 
