--- a/_p/velo/velo.html
+++ b/_p/velo/velo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-    <link rel="icon" href="../ICO/sirano.ico" type="image/x-icon">
+    <link rel="icon" href="/puzzles/ICO/sirano.ico" type="image/x-icon">
 	<title>VeloBF_v.0</title>
 <style type="text/css">
 #d0{ /*position: fixed;*/ width: 600px; height: 300px;
@@ -76,7 +76,7 @@ let W,H,w0,h0,dx,dy; let nx=10; let ny=2;
   var canvas=document.getElementById("Mycanvas");
   var ctx=canvas.getContext("2d");
   var img2=new Image();  // Создаём изображение
-   img2.src = "../Image/3medv.JPG";
+   img2.src = "3medv.JPG";
 
 img2.onload = function() { kf=0;
  W=this.width;  H = this.height; 
