--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
-    <h5>Programs</h5>
+    <h5>Programs</h5>  /_p/velo/velo.html
     <p><a href="puzzles/flag/flag1.html">flag</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/pref21.html">Preferance</a> </p>
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
+    <p><a href="/_p/velo/velo.html">Monocycle</a> </p>
     <p><a href="puzzles/spiralSquare.html">Spiral Square</a> </p>
     <p><a href="puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
     <p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
