--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -37,6 +37,7 @@
     <p><a href="../bajan/flag1.html">FLAG</a><br></p>
     <p><a href="../nick/_tb0/_tb.html">Theater&Billiard</a></p>
     <p><a href="../nick/_tb0/_tb1.html">Bears theater</a></p>
+    <p><a href="/_p/velo/monocycle.html">Barboss Monocycle</a> </p>   
   </div>
   <div class="column">
     <h5>Pictires</h5>
