--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/pref21.html">Preferance</a> </p>
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
-    <p><a href="/_p/velo/velo.html">Monocycle</a> </p>
+    <p><a href="_p/velo/velo.html">Monocycle</a> </p>
     <p><a href="puzzles/spiralSquare.html">Spiral Square</a> </p>
 
 <p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
