--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
-    <h5>Programs</h5>  /_p/velo/velo.html
+    <h5>Programs</h5> 
     <p><a href="puzzles/flag/flag1.html">flag</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/pref21.html">Preferance</a> </p>
